--- a/prank1_coconut.html
+++ b/prank1_coconut.html
@@ -1,37 +1,47 @@
+
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Coconut Surprise</title>
-  <style>
-    body { margin: 0; overflow: hidden; background-color: #f5f5dc; }
-    #coconut { position: absolute; width: 100px; height: 100px; background: url('https://i.imgur.com/HT6bmgA.png') no-repeat center center; background-size: contain; }
-    #message { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background-color: black; color: lime; font-weight: bold; font-size: 5vw; display: flex; align-items: center; justify-content: center; z-index: 10; }
-  </style>
+<meta charset="UTF-8">
+<title>Prank 1 - Coconut</title>
+<style>
+    body {
+        margin: 0;
+        background-color: black;
+        overflow: hidden;
+    }
+    #coconut {
+        position: absolute;
+        width: 100px;
+        animation: bounce 4s ease-in-out forwards;
+    }
+    @keyframes bounce {
+        0%   { top: 0px; left: 50%; transform: translateX(-50%); }
+        25%  { top: 300px; left: 40%; transform: rotate(20deg); }
+        50%  { top: 100px; left: 60%; transform: rotate(-20deg); }
+        75%  { top: 300px; left: 50%; transform: rotate(0deg); }
+        100% { top: 50%; left: 50%; opacity: 0; transform: scale(0); }
+    }
+    #message {
+        color: lime;
+        font-size: 4em;
+        font-weight: bold;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        transform: translateY(-50%);
+        display: none;
+    }
+</style>
 </head>
 <body>
-  <div id="coconut"></div>
-  <div id="message">Sei un marijuano</div>
-  <script>
-    const coconut = document.getElementById('coconut');
-    const message = document.getElementById('message');
-    let x = 100, y = 100, dx = 3, dy = 2;
-    const interval = setInterval(() => {
-      const maxX = window.innerWidth - 100;
-      const maxY = window.innerHeight - 100;
-      x += dx; y += dy;
-      if (x < 0 || x > maxX) dx = -dx;
-      if (y < 0 || y > maxY) dy = -dy;
-      coconut.style.left = x + 'px'; coconut.style.top = y + 'px';
-    }, 10);
-    setTimeout(() => {
-      clearInterval(interval);
-      coconut.style.backgroundImage = "url('https://i.imgur.com/UINHQKj.png')";
-      setTimeout(() => {
-        coconut.style.display = 'none';
-        message.style.display = 'flex';
-      }, 1000);
-    }, 7000);
-  </script>
+<img src="images/coconut.png" id="coconut" onanimationend="showMessage()" />
+<div id="message">Sei un marijuano</div>
+<script>
+function showMessage() {
+    document.getElementById('message').style.display = 'block';
+}
+</script>
 </body>
 </html>
