--- a/prank2_tennis.html
+++ b/prank2_tennis.html
@@ -1,49 +1,60 @@
+
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tennis Smash</title>
-  <style>
-    body { margin: 0; background: #1b1b1b; overflow: hidden; font-family: monospace; }
-    #court { position: relative; width: 100vw; height: 100vh; background: linear-gradient(#006400, #004d00); overflow: hidden; }
-    .player { position: absolute; width: 80px; height: 80px; background-size: cover; image-rendering: pixelated; }
-    #player1 { left: 10%; bottom: 10%; background-image: url('https://i.imgur.com/KfzQoDZ.png'); }
-    #player2 { right: 10%; top: 10%; background-image: url('https://i.imgur.com/KfzQoDZ.png'); transform: scaleX(-1); }
-    #ball { position: absolute; width: 30px; height: 30px; background: url('https://i.imgur.com/7uZzdVu.png') no-repeat center center; background-size: cover; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2; }
-    #crack { display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://i.imgur.com/XF7UgoS.png') no-repeat center center; background-size: cover; z-index: 10; }
-    #message { display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: lime; font-weight: bold; font-size: 5vw; display: flex; align-items: center; justify-content: center; z-index: 11; }
-  </style>
+<meta charset="UTF-8">
+<title>Prank 2 - Tennis</title>
+<style>
+    body {
+        margin: 0;
+        background-color: black;
+        overflow: hidden;
+    }
+    .player {
+        position: absolute;
+        width: 64px;
+        height: 64px;
+        image-rendering: pixelated;
+    }
+    #player1 {
+        left: 20%;
+        top: 50%;
+        animation: move1 2s infinite alternate;
+    }
+    #player2 {
+        left: 70%;
+        top: 50%;
+        animation: move2 2s infinite alternate;
+    }
+    @keyframes move1 { 0% { top: 45%; } 100% { top: 55%; } }
+    @keyframes move2 { 0% { top: 55%; } 100% { top: 45%; } }
+    #ball {
+        position: absolute;
+        width: 32px;
+        animation: smash 4s forwards;
+    }
+    @keyframes smash {
+        0%   { top: 55%; left: 75%; }
+        50%  { top: 48%; left: 30%; }
+        100% { top: 50%; left: 50%; transform: scale(10); opacity: 0; }
+    }
+    #message {
+        color: lime;
+        font-size: 4em;
+        font-weight: bold;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        transform: translateY(-50%);
+        display: none;
+    }
+</style>
 </head>
 <body>
-  <div id="court">
-    <div id="player1" class="player"></div>
-    <div id="player2" class="player"></div>
-    <div id="ball"></div>
-    <div id="crack"></div>
-    <div id="message">Sei un marijuano</div>
-  </div>
-  <script>
-    const ball = document.getElementById('ball');
-    const crack = document.getElementById('crack');
-    const message = document.getElementById('message');
-    let x = 50, y = 50, dx = 0.5, dy = 0.7;
-    const ballInterval = setInterval(() => {
-      x += dx; y += dy;
-      if (x <= 5 || x >= 95) dx = -dx;
-      if (y <= 5 || y >= 95) dy = -dy;
-      ball.style.left = x + '%'; ball.style.top = y + '%';
-    }, 20);
-    setTimeout(() => {
-      clearInterval(ballInterval);
-      ball.style.transition = 'all 0.3s ease-in';
-      ball.style.left = '50%'; ball.style.top = '50%';
-      ball.style.transform = 'scale(10) translate(-50%, -50%)';
-      setTimeout(() => {
-        ball.style.display = 'none';
-        crack.style.display = 'block';
-        setTimeout(() => message.style.display = 'flex', 1000);
-      }, 600);
-    }, 7000);
-  </script>
+<img src="images/player1.png" id="player1" class="player" />
+<img src="images/player2.png" id="player2" class="player" />
+<img src="images/ball.png" id="ball" onanimationend="document.getElementById('message').style.display='block'" />
+<div id="message">Sei un marijuano</div>
 </body>
 </html>
