--- a/prank1_coconut.html
+++ b/prank1_coconut.html
@@ -36,7 +36,7 @@
 </style>
 </head>
 <body>
-<img src="images/coconut.png" id="coconut" onanimationend="showMessage()" />
+<img src="/images/coconut.png" id="coconut" onanimationend="showMessage()" />
 <div id="message">Sei un marijuano</div>
 <script>
 function showMessage() {
