--- a/prank1_coconut.html
+++ b/prank1_coconut.html
@@ -1,47 +1,64 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Prank 1 - Coconut</title>
-<style>
+  <meta charset="UTF-8">
+  <title>Prank 1 - Coconut</title>
+  <style>
     body {
-        margin: 0;
-        background-color: black;
-        overflow: hidden;
+      margin: 0;
+      background-color: black;
+      overflow: hidden;
     }
+
     #coconut {
-        position: absolute;
-        width: 100px;
-        animation: bounce 4s ease-in-out forwards;
+      position: absolute;
+      width: 300px;
+      height: auto;
+      left: 50%;
+      top: 20%;
+      transform: translateX(-50%);
+      animation: bounce 2s infinite;
     }
+
     @keyframes bounce {
-        0%   { top: 0px; left: 50%; transform: translateX(-50%); }
-        25%  { top: 300px; left: 40%; transform: rotate(20deg); }
-        50%  { top: 100px; left: 60%; transform: rotate(-20deg); }
-        75%  { top: 300px; left: 50%; transform: rotate(0deg); }
-        100% { top: 50%; left: 50%; opacity: 0; transform: scale(0); }
+      0%, 100% { top: 20%; }
+      50% { top: 40%; }
     }
+
     #message {
-        color: lime;
-        font-size: 4em;
-        font-weight: bold;
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        width: 100%;
-        transform: translateY(-50%);
-        display: none;
+      display: none;
+      position: absolute;
+      top: 60%;
+      width: 100%;
+      text-align: center;
+      color: lime;
+      font-size: 64px;
+      font-weight: bold;
+      font-family: sans-serif;
+      animation: fadeIn 1s ease-in-out forwards;
     }
-</style>
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+  </style>
 </head>
 <body>
-<img src="/images/coconut.png" id="coconut" onanimationend="showMessage()" />
-<div id="message">Sei un marijuano</div>
-<script>
-function showMessage() {
-    document.getElementById('message').style.display = 'block';
-}
-</script>
+
+  <img id="coconut" src="images/coconut.png" alt="Coconut">
+  <div id="message">Sei un marijuano</div>
+
+  <script>
+    setTimeout(() => {
+      const coconut = document.getElementById("coconut");
+      coconut.src = "images/coconut_broken.png";
+      coconut.style.animation = "none";
+
+      const message = document.getElementById("message");
+      message.style.display = "block";
+    }, 4000); // after 4 seconds
+  </script>
+
 </body>
 </html>
